2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/CatchpointEventArgs.cs,
	  Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/BreakEvent.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/TargetEventType.cs,
	  Mono.Debugging.Client/Catchpoint.cs,
	  Mono.Debugging.Client/Breakpoint.cs,
	  Mono.Debugging.Client/BreakEventArgs.cs, Mono.Debugging.mdp,
	  Makefile.am: Implemented support for catchpoints.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/Breakpoint.cs,
	  Mono.Debugging.Backend/IDebuggerSessionFrontend.cs: Added api to
	  support custom breakpoint hit actions.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ThreadInfo.cs,
	  Mono.Debugging.Client/DebuggerSession.cs: Provide the process id
	  when setting the active thread.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectValueFlags.cs: Added Type and Namespace.
	* Mono.Debugging.Client/ObjectValue.cs: Properly set the name when
	  creating an error object.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/CompletionData.cs, Mono.Debugging.mdp,
	  Mono.Debugging.Backend/IBacktrace.cs, Makefile.am: Added support
	  for code completion.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectValueFlags.cs,
	  Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Client/ObjectValue.cs,
	  Mono.Debugging.Client/ObjectValueKind.cs, Mono.Debugging.mdp,
	  Mono.Debugging.Backend/IBacktrace.cs, Makefile.am: Added flags enum
	  to ObjectValue which give information about the origin of the
	  value.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectPath.cs: Implemented ToString.